--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
 	<div class="file-viewer" style="display: none">
 	</div>
 
-	<div class="error-popup" style="display: none">
-		<div class="error-popup__close-button-wrapper">
-			<button class="error-popup__close-button">+</button>
-		</div>
+	<div class="error-popup-wrapper" style="display: none">
+		<div class="error-popup">
+			<div class="error-popup__close-button-wrapper">
+				<button class="error-popup__close-button">+</button>
+			</div>
 
-		<div class="error-popup__title">Error</div>
-		<div class="error-popup__message">Please add not less than 2 and not more than 5 files.</div>
-		<div class="error-popup__ok-button-wrapper">
-			<button class="error-popup__ok-button">OK</button>
+			<div class="error-popup__title">Error</div>
+			<div class="error-popup__message">Please add not less than 2 and not more than 5 files.</div>
+			<div class="error-popup__ok-button-wrapper">
+				<button class="error-popup__ok-button">OK</button>
+			</div>
 		</div>
 	</div>
 
